# sinas-core

./: .env.example  CLAUDE.md  Caddyfile  DOCS.md  Dockerfile  Dockerfile.executor  FEATURES.md  INSTALL.md  README.md  container_executor.py  docker-compose.yml  init-clickhouse.sql  install.sh  package-lock.json  pyproject.toml  test_perms.py
backend/: Dockerfile.builder  builder_server.js  container_executor.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 255094362009_add_namespace_and_ownership_to_templates.py  54056f649874_add_skills_table_and_agent_enabled_.py  671d4db601a8_add_api_to_triggertype_enum.py  a1b2c3d4e5f6_add_database_connections_queries_and_.py  a6b7c8d9e0f1_remove_mcp.py  c2d3e4f5a6b7_add_collection_config_tracking_fields.py  c4d5e6f7a8b9_add_table_annotations.py  e6f7a8b9c0d1_add_state_dependencies_to_apps.py  e8f9a2b3c4d5_add_shared_pool_and_requires_approval.py  f5a6b7c8d9e0_add_agent_is_default.py  f9a0b1c2d3e4_create_pending_tool_approvals.py  fe01ab23cd45_add_components_table.py  fe02bc34de56_add_component_shares_table.py  fe03cd45ef67_add_enabled_components_to_agents.py  fe04cd56ef78_add_icon_and_is_public.py  fe05de67fg89_add_packages_rename_dependencies.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  permission_registry.py  permissions.py  redis.py
backend/app/models/: __init__.py  agent.py  app.py  chat.py  component.py  component_share.py  database_connection.py  dependency.py  execution.py  file.py  function.py  mixins.py  package.py  pending_approval.py  query.py  schedule.py  skill.py  table_annotation.py  template.py  user.py
backend/app/providers/: anthropic_provider.py  factory.py  mistral_provider.py  (+1 more)
(+259 files in other folders)
